--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "express": "^4.17.1",
     "faker": "^4.1.0",
     "pg": "^8.3.2",
+    "react-redux": "^7.2.1",
+    "redux": "^4.0.5",
     "sequelize": "^6.3.4"
   },
   "devDependencies": {
